# pio-ram-emulator

./: LICENSE  README.md  ram-emu.c  ram-emu.h  serial-ram-emu.pio
docs/: internals.drawio  message-formats.drawio  pio-ram-emulator.md  reading.drawio  scratch.drawio  writing.drawio
pico-ice/ice/: Makefile  cocotb2.mk  tb2.gtkw
pico-ice/pico/: CMakeLists.txt
pico-ice/ram-emu/: README.md
pico-ice/ram-emu-test/: README.md
pico-ice/ram-emu-test/ice/: sb_io.v  sbio2_tester.pcf  sbio2_tester2.sv  tb2.v  test2.py
pico-ice/ram-emu-test/pico/: .gitignore  CMakeLists.txt  ram-emu-test.c
pico-ice/ram-emu/pico/: CMakeLists.txt  ram-emu-main.c
